--- a/index.html
+++ b/index.html
@@ -7,10 +7,6 @@
     <title>suk.kr</title>
   </head>
   <body>
-    <script>
-      window.onload = function () {
-        location.href = "https://suk.kr";
-      };
-    </script>
+    <a href="https://suk.kr">suk.kr 바로가기</a>
   </body>
 </html>
