--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>suk.kr</title>
+    <title>Redirect Page</title>
   </head>
   <body>
-    <a href="https://suk.kr">suk.kr 바로가기</a>
+    <script>
+      window.location.replace("https://bento.me/suk");
+    </script>
   </body>
 </html>
