--- a/index.html
+++ b/index.html
@@ -4,11 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Redirect Page</title>
+    <title>index</title>
   </head>
   <body>
-    <script>
-      window.location.replace("https://bento.me/suk");
-    </script>
   </body>
 </html>
